--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "saludar": "node ejercicio/2-process.js",
     "os": "node ejercicio/index.mjs"
   },
   "author": "Jonathan Angulo",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^5.3.0"
+    "chalk": "5.3.0",
+    "dotenv": "16.3.1"
   }
 }
